began password reset: spec and added email view
